# antimicrox

./: .appveyor.yml  .clang-format  .dockerignore  .github_changelog_generator  .gitignore  .travis.yml  AntiMicro Future Developments.mm  AntiMicroX Future Developments.mm  BUILDING.md  BuildOptions.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Changelog  Dockerfile  ProfileTips.md  README.md  Resources.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addDebugs.sh  advancebuttondialog.cpp  advancebuttondialog.h  advancebuttondialog.ui  antimicro.pro  axiseditdialog.cpp  axiseditdialog.h  axiseditdialog.ui  axisvaluebox.h  buttoneditdialog.cpp  buttoneditdialog.h  buttoneditdialog.ui  buttoneditdialogtwo.cpp  buttoneditdialogtwo.h  buttoneditdialogtwo.ui  buttontempconfig.cpp  buttontempconfig.h  cmake_uninstall.cmake.in  com.github.antimicro.json  (+54 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.md  feature_request.yaml  question.md  question.yaml
.github/workflows/: appimage_build.yml  code_formatting.yml  main.yml  release.yml  static-code-analysis.yml
Releases/3.1.7-windows/: temp
cmake/: FindSDL2.cmake
cmake/modules/: FindSDL2.cmake  NSIS.definitions.nsh.in
containers/: Dockerfile-fedora-latest  Dockerfile-fedora31  Dockerfile-suseleap15.2  Dockerfile-ubuntu-bionic  Dockerfile-ubuntu18
keyboard/: dedicationtoanewagg.cpp  dedicationtoanewagg.h  dedicationtoanewagg.ui  virtualkeyboardmousewidget.cpp  virtualkeyboardmousewidget.h  virtualkeypushbutton.cpp  virtualkeypushbutton.h  virtualmousepushbutton.cpp
other/: 40-uinput.rules  60-antimcrox-uinput.rules  60-antimicrox-uinput.rules  CMakeLists.txt  Doxyfile_config.in  antimicro.1  antimicro.appdata.xml.in  antimicro.desktop  antimicro.xml  antimicroX.1  antimicroX.desktop  antimicrox.1  com.github.antimicrox.antimicrox.desktop  com.github.juliagoda.antimicro.desktop  com.github.juliagoda.antimicroX.desktop  com.github.juliagoda.antimicroX.xml  io.github.antimicrox.antimicrox.desktop  io.github.antimicrox.antimicrox.xml  io.github.antimicrox.antimicrox.yml  io.github.antimicrox.inputdevice.xml
other/appdata/: CMakeLists.txt  antimicro.appdata.xml.in  antimicroX.appdata.xml.in  appdata.its  com.github.antimicrox.antimicrox.appdata.xml.in  com.github.juliagoda.antimicro.appdata.xml.in  com.github.juliagoda.antimicro.appdataX.xml.in  com.github.juliagoda.antimicroX.appdata.xml.in  io.github.antimicrox.antimicrox.appdata.xml.in
other/appdata/PO_files/: en.po
other/darkstyle/: README.md
other/scripts/: build-sdl-lib.bat
other/spec/: antimicro-git.spec
repo/: antimicro-flatpak.gpg  antimicro.flatpakref  antimicro.flatpakrepo  config  summary  summary.sig
repo/gpg/: pubring.kbx  trustdb.gpg
share/: LICENSE_SDL_GameControllerDB  gamecontrollerdb_linux.txt  gamecontrollerdb_windows.txt
share/antimicro/translations/: CMakeLists.txt  antimicro.ts  antimicro_br.ts  antimicro_de.ts  antimicro_en.ts  antimicro_es.ts  antimicro_fr.ts  antimicro_it.ts  antimicro_ja.ts  antimicro_pl.ts  antimicro_ru.ts  antimicro_sr.ts  antimicro_uk.ts  antimicro_zh_CN.ts
share/antimicroX/translations/: CMakeLists.txt  antimicroX.ts  antimicroX_br.ts  antimicroX_br.ts.autosave  antimicroX_de.ts  antimicroX_en.ts  antimicroX_es.ts  antimicroX_fr.ts  antimicroX_it.ts  antimicroX_ja.ts  antimicroX_pl.ts  antimicroX_pt.ts  antimicroX_ru.ts  antimicroX_sr.ts  antimicroX_uk.ts  antimicroX_zh_CN.ts
share/antimicrox/translations/: CMakeLists.txt  antimicrox.ts  antimicrox_br.ts  antimicrox_br.ts.autosave  antimicrox_ca.ts  antimicrox_cs.ts  antimicrox_da.ts  antimicrox_de.ts  antimicrox_en.ts  antimicrox_es.ts  antimicrox_fa.ts  antimicrox_fi.ts  antimicrox_fr.ts  antimicrox_hr.ts  antimicrox_id.ts  antimicrox_it.ts  antimicrox_ja.ts  antimicrox_ko.ts  antimicrox_nb_NO.ts  antimicrox_nl.ts  antimicrox_pl.ts  antimicrox_pt.ts  antimicrox_pt_BR.ts  antimicrox_ru.ts  antimicrox_rue.ts  antimicrox_sk.ts  antimicrox_sr.ts  antimicrox_sv.ts  antimicrox_ta.ts  antimicrox_tr.ts  antimicrox_uk.ts  antimicrox_vi.ts  antimicrox_zh_CN.ts
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addeditautoprofiledialog.cpp  addeditautoprofiledialog.h  addeditautoprofiledialog.ui  advancebuttondialog.cpp  advancebuttondialog.h  advancebuttondialog.ui  advancestickassignmentdialog.cpp  advancestickassignmentdialog.h  advancestickassignmentdialog.ui  antimicro.exe.manifest  antimicro.exe.uiaccess.manifest  antimicro.pro  antimicro.rc  antimicro_pl.ts  antimicrosettings.cpp  antimicrosettings.h  antimicrox_windows_icon.rc  antkeymapper.cpp  antkeymapper.h  applaunchhelper.cpp  applaunchhelper.h  autoprofileinfo.cpp  autoprofileinfo.h  autoprofilewatcher.cpp  autoprofilewatcher.cpp.autosave  autoprofilewatcher.h  axiseditdialog.cpp  axiseditdialog.h  axiseditdialog.ui  axisscope.cpp  axisvaluebox.cpp  axisvaluebox.h  buttoneditdialog.cpp  buttoneditdialog.h  buttoneditdialog.ui  calibration.cpp  calibration.h  (+235 more)
src/eventhandlers/: baseeventhandler.cpp  baseeventhandler.h  cocoaeventhandler.h  cocoaeventhandler.mm  uinputeventhandler.cpp  uinputeventhandler.h  winsendinputeventhandler.cpp  winsendinputeventhandler.h  winvmultieventhandler.cpp  winvmultieventhandler.h  xtesteventhandler.cpp  xtesteventhandler.cpp.autosave  xtesteventhandler.h
src/fakeclasses/: xbox360wireless.cpp  xbox360wireless.h
src/firstrunwizard/: associateprofilespage.cpp  associateprofilespage.h  firstrunwelcomepage.cpp  firstrunwelcomepage.h  firstrunwizard.cpp  (+5 more)
tests/: CMakeLists.txt  testaboutdialog.cpp  testaddeditautoprofiledialog.cpp  testadvancebuttondialog.cpp  testadvancestickassignmentdialog.cpp  testaxiseditdialog.cpp  testbuttoneditdialog.cpp  testcalibration.cpp  testjoycontrolstickeditdialog.cpp  testjoysensordead.cpp  testqkeydisplaydialog.cpp  testquicksetdialog.cpp
windows/: AntiMicro.wxs  AntiMicro_64.wxs
zbudowane/: CMakeCache.txt  cmake_install.cmake  cmake_uninstall.cmake  config.h  install_manifest.txt
(+206 files in other folders)
